# Templ

./: CMakeLists.txt  README.md  documentation.html  index.html  main.cpp
.github/workflows/: release.yml
templates/cmakeCppScript/: CMakeLists.txt
templates/flaskApp/templates/: index.html
